tests/e2e/topologies/grid-static-weighted/resources/common/grid-system-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grid-system
  labels:
    name: grid-system
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
